--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Landing page for solar system planets",
   "main": "index.js",
+  "scripts": {
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+  },
   "repository": "git@github.com:ese-varo/universe-css.git",
   "author": "Alvaro Padilla <varoboss.ap@gmail.com>",
   "license": "MIT",
